<resources>
    <string name="app_name">AttractiveWine</string>
    <string name="cocktail_list">Cocktail list</string>
    <string name="random_pick">Random pick</string>
    <string name="favorite">Favorite</string>
    <string name="cocktail_name">Cocktail name</string>
    <string name="search_hint">Hint</string>
    <string name="action_search">Search</string>
    <string name="recipe">this cocktail recipe</string>
    <string name="ingredients">the ingredients to make the cocktail</string>
    <string name="reroll_rand">Random</string>
    <string name="cocktail_length">cocktail selected</string>
    <string name="cocktail_image">Cocktail image</string>
    <string name="action_filter">Filter choices</string>
    <string name="action_share">Share recipe</string>
    <string name="share_text">Check out this awesome cocktail !</string>
    <string name="option">Open option menu</string>
    <string name="language">Language</string>
    <string name="savePref">Save all files</string>
    <string name="rinit">Reset setting</string>
    <string name="recipe_download_notif_title">Downloading recipes...</string>
    <string name="recipe_download_notif_title_finished">Download finished !</string>
    <string name="selectLanguage">Choose language</string>
    <string name="no_network">No network</string>
    <string name="alert_massiv_dowload">This is a large file, continue ?</string>
    <string name="start_dl">Starting download</string>
</resources>
